# poetry-plugin-nar

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
poetry_plugin_nar/: __init__.py  command.py  nar.py  plugin.py
tests/: conftest.py  helpers.py  test_nar.py  test_plugin.py  types.py
tests/command/: conftest.py  test_build.py
tests/fixtures/dynamic-package/: LICENSE  pyproject.toml
tests/fixtures/dynamic-package/src/pretty_print_json/: __about__.py  processor.py
tests/fixtures/multiple-readme/: pyproject.toml
tests/fixtures/package-format-nar/: pyproject.toml
tests/fixtures/package-in-src/: pyproject.toml
tests/fixtures/package-with-license/: LICENSE  pyproject.toml
tests/fixtures/pretty-print-json/: README.md  pyproject.toml
tests/fixtures/pretty-print-json/pretty_print_json/: __about__.py  processor.py
tests/fixtures/simple-project/: README.rst  pyproject.toml
tests/fixtures/write-numpy-version/: README.md  pyproject.toml
tests/fixtures/write-numpy-version/write_numpy_version/: processor.py
