[tool.poetry]
name = "write-numpy-version"
version = "0.0.1"
description = ""
license = "Apache-2.0"
authors = ["Mark Payne <markap14@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = [
    {version = "2.0.2", python = "~3.9"},
    {version = "^2.1.0", python = "^3.10"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
